syntax = "proto3";

package dalalstreet.api.datastreams;

option java_multiple_files=true;

message StockExchangeDataPoint {
    uint64 price = 1;
    uint64 stocks_in_exchange = 2;
    uint64 stocks_in_market = 3;
}

message StockExchangeUpdate {
    map<uint32, StockExchangeDataPoint> stocks_in_exchange = 1;
}
